// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag clips long strings 1`] = `
<div
  aria-disabled={false}
  className="box paddingX2 paddingY1 relative rounding2 secondary xsDisplayInlineBlock"
  style={
    Object {
      "height": 32,
      "maxWidth": 300,
    }
  }
>
  <div
    className="Flex rowGap0 columnGap0 xsDirectionRow xsItemsCenter"
    style={
      Object {
        "height": "100%",
      }
    }
  >
    <div
      className="box marginEnd0 marginStart0"
    />
    <div
      className="box marginEnd5"
      title="The quick brown fox jumps over the lazy dog"
    >
      <span
        className="Text fontSize200 defaultText alignStart breakWord fontWeightNormal lineClamp"
        style={
          Object {
            "WebkitLineClamp": 1,
          }
        }
        title="The quick brown fox jumps over the lazy dog"
      >
        The quick brown fox jumps over the lazy dog
      </span>
    </div>
    <div
      className="box"
    >
      <button
        className="button secondary hideOutline tapTransition accessibilityOutline"
        onClick={[Function]}
        type="button"
      >
        <div
          className="box justifyCenter xsDisplayFlex xsItemsCenter"
          style={
            Object {
              "paddingInlineEnd": 2,
              "width": "100%",
            }
          }
        >
          <svg
            aria-hidden={null}
            aria-label="Remove long example tag"
            className="icon defaultIcon iconBlock"
            height={10}
            role="img"
            viewBox="0 0 24 24"
            width={10}
          >
            <path
              d="test-file-stub"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Tag renders 1`] = `
<div
  aria-disabled={false}
  className="box paddingX2 paddingY1 relative rounding2 secondary xsDisplayInlineBlock"
  style={
    Object {
      "height": 32,
      "maxWidth": 300,
    }
  }
>
  <div
    className="Flex rowGap0 columnGap0 xsDirectionRow xsItemsCenter"
    style={
      Object {
        "height": "100%",
      }
    }
  >
    <div
      className="box marginEnd0 marginStart0"
    />
    <div
      className="box marginEnd5"
      title="New"
    >
      <span
        className="Text fontSize200 defaultText alignStart breakWord fontWeightNormal lineClamp"
        style={
          Object {
            "WebkitLineClamp": 1,
          }
        }
        title="New"
      >
        New
      </span>
    </div>
    <div
      className="box"
    >
      <button
        className="button secondary hideOutline tapTransition accessibilityOutline"
        onClick={[Function]}
        type="button"
      >
        <div
          className="box justifyCenter xsDisplayFlex xsItemsCenter"
          style={
            Object {
              "paddingInlineEnd": 2,
              "width": "100%",
            }
          }
        >
          <svg
            aria-hidden={null}
            aria-label="Remove New tag"
            className="icon defaultIcon iconBlock"
            height={10}
            role="img"
            viewBox="0 0 24 24"
            width={10}
          >
            <path
              d="test-file-stub"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Tag renders a disabled tag 1`] = `
<div
  aria-disabled={true}
  className="box paddingX2 paddingY1 relative rounding2 secondary xsDisplayInlineBlock"
  style={
    Object {
      "border": "solid 1px #767676",
      "height": 32,
      "maxWidth": 300,
    }
  }
>
  <div
    className="Flex rowGap0 columnGap0 xsDirectionRow xsItemsCenter"
    style={
      Object {
        "height": "100%",
      }
    }
  >
    <div
      className="box marginEnd0 marginStart0"
    />
    <div
      className="box marginEnd0"
      title="New"
    >
      <span
        className="Text fontSize200 subtleText alignStart breakWord fontWeightNormal lineClamp"
        style={
          Object {
            "WebkitLineClamp": 1,
          }
        }
        title="New"
      >
        New
      </span>
    </div>
    <div
      className="box"
    />
  </div>
</div>
`;

exports[`Tag renders a tag with a warning state 1`] = `
<div
  aria-disabled={false}
  className="box paddingX2 paddingY1 relative rounding2 warningBase xsDisplayInlineBlock"
  style={
    Object {
      "height": 32,
      "maxWidth": 300,
    }
  }
>
  <div
    className="Flex rowGap0 columnGap0 xsDirectionRow xsItemsCenter"
    style={
      Object {
        "height": "100%",
      }
    }
  >
    <div
      className="box marginEnd1 marginStart1"
    >
      <svg
        aria-hidden={null}
        aria-label="Warning"
        className="icon inverseIcon iconBlock"
        height={12}
        role="img"
        viewBox="0 0 24 24"
        width={12}
      >
        <path
          d="test-file-stub"
        />
      </svg>
    </div>
    <div
      className="box marginEnd5"
      title="New"
    >
      <span
        className="Text fontSize200 inverseText alignStart breakWord fontWeightNormal lineClamp"
        style={
          Object {
            "WebkitLineClamp": 1,
          }
        }
        title="New"
      >
        New
      </span>
    </div>
    <div
      className="box"
    >
      <button
        className="button warningBase hideOutline tapTransition accessibilityOutline"
        onClick={[Function]}
        type="button"
      >
        <div
          className="box justifyCenter xsDisplayFlex xsItemsCenter"
          style={
            Object {
              "paddingInlineEnd": 2,
              "width": "100%",
            }
          }
        >
          <svg
            aria-hidden={null}
            aria-label="Remove tag"
            className="icon inverseIcon iconBlock"
            height={10}
            role="img"
            viewBox="0 0 24 24"
            width={10}
          >
            <path
              d="test-file-stub"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Tag renders a tag with an error state 1`] = `
<div
  aria-disabled={false}
  className="box errorBase paddingX2 paddingY1 relative rounding2 xsDisplayInlineBlock"
  style={
    Object {
      "height": 32,
      "maxWidth": 300,
    }
  }
>
  <div
    className="Flex rowGap0 columnGap0 xsDirectionRow xsItemsCenter"
    style={
      Object {
        "height": "100%",
      }
    }
  >
    <div
      className="box marginEnd1 marginStart1"
    >
      <svg
        aria-hidden={null}
        aria-label="Error"
        className="icon inverseIcon iconBlock"
        height={12}
        role="img"
        viewBox="0 0 24 24"
        width={12}
      >
        <path
          d="test-file-stub"
        />
      </svg>
    </div>
    <div
      className="box marginEnd5"
      title="New"
    >
      <span
        className="Text fontSize200 inverseText alignStart breakWord fontWeightNormal lineClamp"
        style={
          Object {
            "WebkitLineClamp": 1,
          }
        }
        title="New"
      >
        New
      </span>
    </div>
    <div
      className="box"
    >
      <button
        className="button errorBase hideOutline tapTransition accessibilityOutline"
        onClick={[Function]}
        type="button"
      >
        <div
          className="box justifyCenter xsDisplayFlex xsItemsCenter"
          style={
            Object {
              "paddingInlineEnd": 2,
              "width": "100%",
            }
          }
        >
          <svg
            aria-hidden={null}
            aria-label="Remove tag"
            className="icon inverseIcon iconBlock"
            height={10}
            role="img"
            viewBox="0 0 24 24"
            width={10}
          >
            <path
              d="test-file-stub"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
</div>
`;
